<resources>
    <string name="app_name">MyDondaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="collect_fare">Collect Fare</string>
    <string name="transaction_history">Transaction History</string>
    <string name="fare_settings">Fare settings</string>
    <string name="help_and_support">Help and Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collect">collect</string>
    <string name="amount">amount</string>
    <string name="route">Route</string>
    <string name="phone_number">Phone Number</string>
    <string name="fare_collection">Fare Collection</string>
    <string name="my_donda_app">My Donda App</string>
    <string name="mydonda_gmail_com">mydonda@gmail.com</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="welcome_n_back">Welcome \n back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account, Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="Email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_route">Enter Route</string>
    <string name="from_where">From Where</string>
    <string name="to_where">To Where</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="add_route">Add Route</string>
    <string name="saved_routes">SAVED ROUTES</string>
    <string name="rate">Rate</string>
    <string name="delete">Delete</string>
    <string name="rongai_to_kiserian">Rongai to Kiserian</string>
    <string name="Delete">DELETE</string>
    <string name="Rongai_to_kiserian">Rongai to Kiserian</string>
    <string name="_50">50</string>
    <string name="DELETE">DELETE</string>
    <string name="name">Name</string>
    <string name="Email_profile">Email</string>
    <string name="profile">Profile</string>
    <string name="working_hours">Working Hours</string>
    <string name="stop_job">Stop Job</string>
    <string name="start_job">Start Job</string>
    <string name="edit">edit</string>
    <string name="today">Today</string>
    <string name="transaction_history1">Transaction History</string>
</resources>