<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_gray"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/app_logo"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp"
        android:background="@drawable/bluegradientbackgroundnoradius"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/fare_settings"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/bluebackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_route"
            android:textColor="@color/white"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/From"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/whitegradientbackground"
                android:hint="@string/from_where"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/To"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/whitegradientbackground"
                android:hint="@string/to_where"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_rate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/whitegradientbackground"
                android:hint="@string/enter_rate"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/maroongradientbackground"
            android:text="@string/add_route"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bluebackgroundnoradius">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/savedroutesbg"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/saved_routes"
            android:textColor="#FFFFFF"
            android:textSize="10sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:background="@color/white"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <TableRow
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:padding="8dp"/>
            </TableRow>

            <TableRow
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rongai_to_kiserian"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:padding="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/maroongradientbackground"
                    android:text="@string/Delete"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>
            </TableRow>

            <TableRow
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rongai_to_kiserian"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50"
                    android:padding="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/maroongradientbackground"
                    android:text="@string/DELETE"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>
            </TableRow>

            <TableRow
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DELETE"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50"
                    android:padding="8dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/maroongradientbackground"
                    android:text="DELETE"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>