<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.firstapp.testdondaapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.firstapp.testdondaapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.firstapp.testdondaapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_farecollection"
        android:name="com.firstapp.testdondaapp.ui.FareCollection"
        android:label="Fare Collection"
        tools:layout="@layout/fragment_fare_collection" />
    <fragment
        android:id="@+id/nav_faresettings"
        android:name="com.firstapp.testdondaapp.ui.FareSettings"
        android:label="Fare Settings"
        tools:layout="@layout/fragment_fare_settings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.firstapp.testdondaapp.ui.Profile"
        android:label="Fare Settings"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_workinghours"
        android:name="com.firstapp.testdondaapp.ui.ui.workingHours"
        android:label="Working Hours"
        tools:layout="@layout/fragment_working_hours" />

    <fragment
        android:id="@+id/nav_transactionhistory"
        android:name="com.firstapp.testdondaapp.TransactionHistory"
        android:label="Transaction history"
        tools:layout="@layout/fragment_transaction_history" />







</navigation>