<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/soft_gray"
        android:padding="16dp">

        <!-- Logo Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/app_logo" />

            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="#000000"
                android:layout_margin="16dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/mpesa_logo3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">
            <!-- Fare Collection Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bluegradientbackground"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/fare_collection"

                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <!-- Form Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/opaquebluebackground"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Route Selection -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/route"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/mySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/white_background"
                    android:spinnerMode="dropdown"
                    android:textSize="20sp" />

                <!-- Amount Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/white_background"
                        android:hint="@string/amount"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Phone Number Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/white_background"
                        android:hint="@string/phone_number"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Collect Button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/gradient_maroon"
                    android:text="@string/collect"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Bottom Navigation View -->


</FrameLayout>

